fix: 镜像源变更为 http

--- a/jq/Dockerfile
+++ b/jq/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bullseye-slim
 
 LABEL MAINTAINER="oss@sentry.io"
 
-RUN sed -i 's#http://deb.debian.org#https://mirrors.cloud.tencent.com#g' /etc/apt/sources.list
+RUN sed -i 's#http://deb.debian.org#http://mirrors.cloud.tencent.com#g' /etc/apt/sources.list
 RUN set -x \
   && apt-get update \
   && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends jq \
